# compox

./: CHANGELOG.md  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.txt  pyproject.toml  tox.ini
.github/workflows/: docs.yaml  release.yml  test.yml
algorithms/: README.md  readme.md
algorithms/algorithm_template/: README.md  Runner.py  main.py  pyproject.toml
algorithms/algorithm_template/dependencies/: utils.py
algorithms/flow_denoising/: README.md  Runner.py  pyproject.toml
algorithms/particle_seg_3d/: README.md  Runner.py  pyproject.toml
algorithms/template_denoising_algorithm/: README.md  Runner.py  pyproject.toml
algorithms/template_denoising_algorithm/image_denoising/: denoising_utils.py
algorithms/template_registration_algorithm/: README.md  Runner.py  pyproject.toml
algorithms/template_registration_algorithm/image_registration/: registration_utils.py
algorithms/template_segmentation_algorithm/: README.md  Runner.py  pyproject.toml
algorithms/template_segmentation_algorithm/image_segmentation/: segmentation_utils.py
docs/: conf.py  development.rst  index.rst  reference.rst  tutorials.rst
docs/_build/doctrees/: environment.pickle  include_readme.doctree  index.doctree  readme_link.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: include_readme.rst.txt  index.rst.txt  readme_link.md.txt
src/compox/: algorithm_debug.py  cli.py  deploy_algorithms.py  pydantic_models.py  run_server.py  run_worker.py  server_utils.py  version.py
src/compox/algorithm_utils/: AlgorithmConfigSchema.py  AlgorithmDeployer.py  AlgorithmManager.py  BaseRunner.py  Image2AlignmentRunner.py  Image2EmbeddingRunner.py  Image2ImageRunner.py  Image2SegmentationRunner.py  LocalDebugSession.py  Segmentation2SegmentationRunner.py  deployment_utils.py  io_schemas.py  runner_context.py
src/compox/components/: api_builder.py  celery_builder.py  db_connection_builder.py  minio_wrapper.py  server_builder.py
src/compox/config/: server_settings.py
src/compox/database_connection/: BaseConnection.py  InMemoryConnection.py  S3Connection.py  TempfileConnection.py  database_utils.py
src/compox/internal/: CUDAMemoryManager.py  JobPOpen.py  ServerSystrayInterface.py  downloader.py
src/compox/routers/: algorithms_controller.py  execution_controller.py  execution_manager.py  file_controller.py  file_controller_v1.py  root.py
src/compox/session/: DataCache.py  TaskSession.py
src/compox/tasks/: DebuggingTaskHandler.py  TaskHandler.py  celery_task.py  context_task_handler.py  fastapi_background_task.py
src/t3d_server/: cli.py  deploy_algorithms.py  pydantic_models.py  run_server.py  run_worker.py  server_utils.py
src/t3d_server/algorithm_utils/: AlgorithmConfigSchema.py  AlgorithmDeployer.py  AlgorithmManager.py  BaseRunner.py  Image2AlignmentRunner.py  Image2EmbeddingRunner.py  Image2ImageRunner.py  Image2SegmentationRunner.py  Segmentation2SegmentationRunner.py  deployment_utils.py  io_schemas.py
src/t3d_server/components/: api_builder.py  celery_builder.py  db_connection_builder.py  minio_wrapper.py  server_builder.py
src/t3d_server/config/: server_settings.py
src/t3d_server/database_connection/: BaseConnection.py  InMemoryConnection.py  S3Connection.py  TempfileConnection.py  database_utils.py
src/t3d_server/internal/: CUDAMemoryManager.py  ServerSystrayInterface.py  downloader.py  logging.py
src/t3d_server/routers/: algorithms_controller.py  execution_controller.py  execution_manager.py  file_controller.py  file_controller_v1.py  root.py
src/t3d_server/session/: DataCache.py  TaskSession.py
src/t3d_server/tasks/: DebuggingTaskHandler.py  TaskHandler.py  celery_task.py  context_task_handler.py  fastapi_background_task.py
tests/: conftest.py  pytest.ini  test_algorithm_deployer.py  test_base_runner.py  test_child_runners.py  test_datacache.py  test_delete_file.py  test_execute_algorithm.py  test_file_controller_v1.py  test_get_algorithm.py  test_get_all_algorithms.py  test_get_execution_record.py  test_get_file.py  test_post_file.py  test_runner_attribute_behavior.py  test_server.yaml  test_server_utils.py  test_stress.py  test_task_handler.py  test_task_session.py  test_utils.py
tests/algorithms/bar/: Runner.py  main.py  pyproject.toml
tests/algorithms/dummy/: README.md  Runner.py  pyproject.toml
tests/algorithms/foo/: Runner.py  main.py  pyproject.toml
tests/algorithms/foo/dependencies/: utils.py
