[project]
name = "algorithm_template"
version = "1.0.0"
description = "PDM template for algorithms intended for deployment into T3D python compute backend"
authors = [
]
dependencies = [
    "python-computing-backend @ file:///${PROJECT_ROOT}/../../t3d_server",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[tool.t3dserver]
# Whether to check if the module is importable by performing an import
# test.
check_importable = false

# Whether to obfuscate the .py files. The obfuscation
# is not implemented yet. For now, the .py files are minimized using
# python_minifier.
obfuscate = false

# Whether to check the hash of the module against existing modules in
# the database server. Will check if the module already exists by comparing
# the etag hash. If the module already exists, it will reuse it and return
# the existing module id instead of uploading.
hash_module = false

# Whether to check the hash of the algorithm assets against existing assets in
# the database server. Will check if the asset already exists by comparing
# their hashes. If the asset already exists, it will reuse it and return
# the existing asset id instead of uploading.
hash_assets = false

[tool.pdm]
distribution = false

[[tool.pdm.source]]
url = "https://download.pytorch.org/whl/cu118"
verify_ssl = true
name = "torch"

[[tool.pdm.source]]
url = "https://download.pytorch.org/whl/cu118"
verify_ssl = true
name = "torchvision"