[project]
name = "template_denosing_algorithm"
version = "1.0.0"

[tool.t3dserver]
algorithm_type = "Image2Image"
tags = ["image-denoising"]
description = "Denoises a sequence of images using the total variation denoising algorithm."
supported_devices = ["cpu", "gpu"]
default_device = "cpu"
additional_parameters = [
    {name = "denoising_weight", description = "The weight of the denoising term between 0 and 1. Higher values will result in more denoising, but can distort the image.", config = {type = "float_range", default = 0.1, min = 0.0, max = 1.0, step = 0.05, adjustable = true}},
]

# Whether to check if the module is importable by performing an import
# test.
check_importable = false

# Whether to obfuscate the .py files. The obfuscation
# is not implemented yet. For now, the .py files are minimized using
# python_minifier.
obfuscate = true

# Whether to check the hash of the module against existing modules in
# the database server. Will check if the module already exists by comparing
# the etag hash. If the module already exists, it will reuse it and return
# the existing module id instead of uploading.
hash_module = true

# Whether to check the hash of the algorithm assets against existing assets in
# the database server. Will check if the asset already exists by comparing
# their hashes. If the asset already exists, it will reuse it and return
# the existing asset id instead of uploading.
hash_assets = true