[project]
name = "template_segmentation_algorithm"
version = "1.0.0"

[tool.compox]
algorithm_type = "Image2Segmentation"
tags = ["image-segmentation"]
description = "Performs a binary segmentation of a 3-D image using a skimage filter."
supported_devices = ["cpu", "gpu"]
default_device = "cpu"
additional_parameters = [
    {name = "thresholding_algorithm", description = "The thresholding algorithm to use.", config = {type = "string_enum", default = "otsu", options = ["otsu", "yen", "li", "minimum", "mean", "triangle", "isodata", "local"], adjustable = true}},
]
# Whether to check if the module is importable by performing an import
# test.
check_importable = false

# Whether to obfuscate the .py files. The obfuscation
# is not implemented yet. For now, the .py files are minimized using
# python_minifier.
obfuscate = true

# Whether to check the hash of the module against existing modules in
# the database server. Will check if the module already exists by comparing
# the etag hash. If the module already exists, it will reuse it and return
# the existing module id instead of uploading.
hash_module = true

# Whether to check the hash of the algorithm assets against existing assets in
# the database server. Will check if the asset already exists by comparing
# their hashes. If the asset already exists, it will reuse it and return
# the existing asset id instead of uploading.
hash_assets = true